--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@ input[type="text"], input[type="number"], input[type="search"]{background:#0b122
 .hidden{display:none}
 .kbd{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;background:#0b1222;border:1px solid #233046;border-radius:6px;padding:4px 8px;font-size:16px}
 
+/* 検査種別ボタンの文字整列（高さ揃え） */
+#modeGrid .btn {
+  white-space: normal;      /* 折り返し許可 */
+  line-height: 1.3;         /* 行間を少し詰める */
+  min-height: 90px;         /* 高さを統一 */
+  display: flex;            /* Flexで中央寄せ */
+  align-items: center;      /* 縦中央 */
+  justify-content: center;  /* 横中央 */
+  text-align: center;       /* テキスト中央 */
+  padding: 12px;            /* 内側余白を均等に */
+}
+
+
 /* 検査者ボタンを3等分 */
 #operatorBar{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;width:100%}
 #operatorBar .btn{width:100%;text-align:center}
