--- a/index.html
+++ b/index.html
@@ -206,9 +206,8 @@ input[type="text"], input[type="number"], input[type="search"]{background:#0b122
 <div class="card" style="margin:12px 0; padding:24px; text-align:center; background:#222; border:2px solid #4ade80;">
   <div class="section-title" style="font-size:24px; margin-bottom:12px; color:#4ade80;">問い合わせNo.（必須）</div>
   <input id="inqNo" type="text"
-         placeholder="A123456 または 123456"
+         placeholder="A12345 または 123456"
          inputmode="latin-prose"
-         pattern="A?[0-9]{6}"
          style="font-size:28px; padding:12px 16px; width:90%; max-width:400px;
                 border-radius:8px; border:none; text-align:center;
                 background:#0b1222; color:#fff;" />
@@ -603,7 +602,7 @@ function updateSendPre2Button() {
 async function sendPre2() {
   if(!state.operator || !state.mode) return toast('検査者/種別を選択');
   if(!debounceSendGuard()) return;
-  if(!state.pre2.inqNo || !/^A?\d{6}$/.test(state.pre2.inqNo)) return toast('問い合わせNo.を確認');
+　if(!state.pre2.inqNo){  return toast('問い合わせNo.を入力してください');}
   if(state.pre2.locs.length === 0) return toast('箇所を1つ以上追加してください');
 
   try {
